ply-3.11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON addP programa1
Rule 2     addP -> <empty>
Rule 3     programa1 -> vars quadMain modules programa2
Rule 4     programa1 -> vars quadMain modules
Rule 5     programa1 -> programa2
Rule 6     programa2 -> main
Rule 7     main -> MAIN save_fun LPAREN param2 RPAREN LCURLY vars statement RCURLY END
Rule 8     quadMain -> <empty>
Rule 9     tipo -> INT guardaTipoVar
Rule 10    tipo -> FLOAT guardaTipoVar
Rule 11    tipo -> CHAR guardaTipoVar
Rule 12    guardaTipoVar -> <empty>
Rule 13    vars -> var
Rule 14    vars -> empty
Rule 15    var -> VAR var2
Rule 16    var1 -> ID
Rule 17    var1 -> ID COMMA var1 addV
Rule 18    var1 -> ID arr
Rule 19    var1 -> ID arr COMMA var1 addV
Rule 20    var1 -> ID mat COMMA var1 addV
Rule 21    var1 -> ID mat
Rule 22    var1 -> ID mat especial
Rule 23    var1 -> empty
Rule 24    addV -> <empty>
Rule 25    var2 -> var2 tipo var1 SEMICOLON addV
Rule 26    var2 -> empty
Rule 27    especial -> TRANSPUESTA
Rule 28    especial -> INVERSA
Rule 29    especial -> DETERMINANTE
Rule 30    arr -> LBRACKET CTEI RBRACKET
Rule 31    arr -> LBRACKET exp RBRACKET
Rule 32    mat -> LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
Rule 33    mat -> LBRACKET exp RBRACKET LBRACKET exp RBRACKET
Rule 34    mat -> LBRACKET exp RBRACKET LBRACKET CTEI RBRACKET
Rule 35    mat -> LBRACKET CTEI RBRACKET LBRACKET exp RBRACKET
Rule 36    modules -> function modules
Rule 37    modules -> empty
Rule 38    save_fun -> <empty>
Rule 39    function -> FUN VOID function1 end_func
Rule 40    function -> FUN INT function2 end_func
Rule 41    function -> FUN CHAR function2 end_func
Rule 42    function -> FUN FLOAT function2 end_func
Rule 43    function1 -> ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RCURLY
Rule 44    function2 -> ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RETURN operadorReturn exp quad_return SEMICOLON RCURLY
Rule 45    end_func -> <empty>
Rule 46    operadorReturn -> <empty>
Rule 47    quad_return -> <empty>
Rule 48    statement -> statement1 statement
Rule 49    statement -> empty
Rule 50    statement1 -> asignacion SEMICOLON
Rule 51    statement1 -> llamada SEMICOLON
Rule 52    statement1 -> lectura SEMICOLON
Rule 53    statement1 -> escritura SEMICOLON
Rule 54    statement1 -> for
Rule 55    statement1 -> if
Rule 56    statement1 -> while
Rule 57    asignacion -> ID saveId2 EQUALS addOperadorName exp genera_quad_asignacion
Rule 58    asignacion -> ID saveId2 arr EQUALS addOperadorName exp genera_quad_asignacion
Rule 59    asignacion -> ID saveId2 mat EQUALS addOperadorName exp genera_quad_asignacion
Rule 60    genera_quad_asignacion -> <empty>
Rule 61    addOperadorName -> <empty>
Rule 62    param1 -> ID addV
Rule 63    param1 -> ID COMMA var1 addV
Rule 64    param1 -> ID arr
Rule 65    param1 -> ID arr COMMA var1 addV
Rule 66    param1 -> ID mat COMMA var1 addV
Rule 67    param1 -> ID mat
Rule 68    param1 -> ID mat especial
Rule 69    param1 -> empty
Rule 70    addParam -> <empty>
Rule 71    param2 -> param2 tipo param1 addV addParam
Rule 72    param2 -> empty
Rule 73    verifica_parametros -> <empty>
Rule 74    cuenta_parametros -> <empty>
Rule 75    llamada -> ID era_call LPAREN aux_exp verifica_parametros RPAREN gosub_quad
Rule 76    aux_exp -> exp
Rule 77    aux_exp -> exp quad_param COMMA cuenta_parametros aux_exp
Rule 78    aux_exp -> empty
Rule 79    ZeroParameters -> <empty>
Rule 80    era_call -> <empty>
Rule 81    quad_param -> <empty>
Rule 82    gosub_quad -> <empty>
Rule 83    if -> IF LPAREN exp RPAREN if_quad LCURLY statement RCURLY else end_if
Rule 84    else -> ELSE else_quad LCURLY statement RCURLY
Rule 85    else -> empty
Rule 86    for_op -> <empty>
Rule 87    for_quad -> <empty>
Rule 88    for -> FOR for_op LPAREN for1 RPAREN for_quad LCURLY statement RCURLY for_end
Rule 89    for1 -> FROM asignacion TO exp
Rule 90    loop_end -> <empty>
Rule 91    for_end -> <empty>
Rule 92    while_quad -> <empty>
Rule 93    while_op -> <empty>
Rule 94    while -> WHILE while_op LPAREN exp RPAREN while_quad LCURLY statement RCURLY loop_end
Rule 95    escritura -> PRINT LPAREN operadorPrint escritura1 operatorPrintQuad RPAREN
Rule 96    escritura1 -> escritura2 COMMA escritura2
Rule 97    escritura1 -> escritura2
Rule 98    escritura2 -> COMILLA CTESTRING COMILLA
Rule 99    escritura2 -> CTEI saveCTE operatorPrintQuad
Rule 100   escritura2 -> CTEF saveCTE operatorPrintQuad
Rule 101   escritura2 -> exp
Rule 102   lectura -> READ operatorRead LPAREN exp operatorReadQuad RPAREN
Rule 103   exp -> nexp
Rule 104   exp -> nexp OR addOperadorName nexp genera_quad_or
Rule 105   genera_quad_or -> <empty>
Rule 106   genera_quad_and -> <empty>
Rule 107   compare_quad -> <empty>
Rule 108   if_quad -> <empty>
Rule 109   end_if -> <empty>
Rule 110   else_quad -> <empty>
Rule 111   nexp -> compexp
Rule 112   nexp -> compexp AND addOperadorName compexp genera_quad_and
Rule 113   compexp -> sumexp
Rule 114   compexp -> compexp1 sumexp
Rule 115   compexp1 -> sumexp GT addOperadorName sumexp compare_quad
Rule 116   compexp1 -> sumexp LT addOperadorName sumexp compare_quad
Rule 117   compexp1 -> sumexp GTE addOperadorName sumexp compare_quad
Rule 118   compexp1 -> sumexp LTE addOperadorName sumexp compare_quad
Rule 119   compexp1 -> sumexp NE addOperadorName sumexp compare_quad
Rule 120   compexp1 -> sumexp COMPARE addOperadorName sumexp compare_quad
Rule 121   sumexp -> mulexp
Rule 122   sumexp -> mulexp PLUS addOperadorName mulexp genera_sum_quad
Rule 123   sumexp -> mulexp MINUS addOperadorName mulexp genera_sum_quad
Rule 124   genera_sum_quad -> <empty>
Rule 125   genera_mul_quad -> <empty>
Rule 126   operadorPrint -> <empty>
Rule 127   operatorPrintQuad -> <empty>
Rule 128   operatorRead -> <empty>
Rule 129   operatorReadQuad -> <empty>
Rule 130   mulexp -> pexp
Rule 131   mulexp -> pexp MUL addOperadorName pexp genera_mul_quad
Rule 132   mulexp -> pexp DIV addOperadorName pexp genera_mul_quad
Rule 133   pexp -> var1 saveId
Rule 134   pexp -> CTEI saveCTE
Rule 135   pexp -> CTEF saveCTE
Rule 136   pexp -> CTEC saveCTE
Rule 137   pexp -> CTESTRING saveCTE
Rule 138   pexp -> llamada
Rule 139   pexp -> LPAREN exp RPAREN
Rule 140   empty -> <empty>
Rule 141   saveId -> <empty>
Rule 142   saveId2 -> <empty>
Rule 143   saveCTE -> <empty>

Terminals, with rules where they appear

AND                  : 112
CHAR                 : 11 41
COMILLA              : 98 98
COMMA                : 17 19 20 63 65 66 77 96
COMPARE              : 120
CTEC                 : 136
CTEF                 : 100 135
CTEI                 : 30 32 32 34 35 99 134
CTESTRING            : 98 137
DETERMINANTE         : 29
DIV                  : 132
ELSE                 : 84
END                  : 7
EQUALS               : 57 58 59
FLOAT                : 10 42
FOR                  : 88
FROM                 : 89
FUN                  : 39 40 41 42
GT                   : 115
GTE                  : 117
ID                   : 1 16 17 18 19 20 21 22 43 44 57 58 59 62 63 64 65 66 67 68 75
IF                   : 83
INT                  : 9 40
INVERSA              : 28
LBRACKET             : 30 31 32 32 33 33 34 34 35 35
LCURLY               : 7 43 44 83 84 88 94
LPAREN               : 7 43 44 75 83 88 94 95 102 139
LT                   : 116
LTE                  : 118
MAIN                 : 7
MINUS                : 123
MUL                  : 131
NE                   : 119
OR                   : 104
PLUS                 : 122
PRINT                : 95
PROGRAM              : 1
RBRACKET             : 30 31 32 32 33 33 34 34 35 35
RCURLY               : 7 43 44 83 84 88 94
READ                 : 102
RETURN               : 44
RPAREN               : 7 43 44 75 83 88 94 95 102 139
SEMICOLON            : 1 25 43 44 44 50 51 52 53
TO                   : 89
TRANSPUESTA          : 27
VAR                  : 15
VOID                 : 39
WHILE                : 94
error                : 

Nonterminals, with rules where they appear

ZeroParameters       : 
addOperadorName      : 57 58 59 104 112 115 116 117 118 119 120 122 123 131 132
addP                 : 1
addParam             : 71
addV                 : 17 19 20 25 62 63 65 66 71
arr                  : 18 19 58 64 65
asignacion           : 50 89
aux_exp              : 75 77
compare_quad         : 115 116 117 118 119 120
compexp              : 111 112 112
compexp1             : 114
cuenta_parametros    : 77
else                 : 83
else_quad            : 84
empty                : 14 23 26 37 49 69 72 78 85
end_func             : 39 40 41 42
end_if               : 83
era_call             : 75
escritura            : 53
escritura1           : 95
escritura2           : 96 96 97
especial             : 22 68
exp                  : 31 33 33 34 35 44 57 58 59 76 77 83 89 94 101 102 139
for                  : 54
for1                 : 88
for_end              : 88
for_op               : 88
for_quad             : 88
function             : 36
function1            : 39
function2            : 40 41 42
genera_mul_quad      : 131 132
genera_quad_and      : 112
genera_quad_asignacion : 57 58 59
genera_quad_or       : 104
genera_sum_quad      : 122 123
gosub_quad           : 75
guardaTipoVar        : 9 10 11
if                   : 55
if_quad              : 83
lectura              : 52
llamada              : 51 138
loop_end             : 94
main                 : 6
mat                  : 20 21 22 59 66 67 68
modules              : 3 4 36
mulexp               : 121 122 122 123 123
nexp                 : 103 104 104
operadorPrint        : 95
operadorReturn       : 44
operatorPrintQuad    : 95 99 100
operatorRead         : 102
operatorReadQuad     : 102
param1               : 71
param2               : 7 43 44 71
pexp                 : 130 131 131 132 132
programa             : 0
programa1            : 1
programa2            : 3 5
quadMain             : 3 4
quad_param           : 77
quad_return          : 44
saveCTE              : 99 100 134 135 136 137
saveId               : 133
saveId2              : 57 58 59
save_fun             : 7 43 44
statement            : 7 43 44 48 83 84 88 94
statement1           : 48
sumexp               : 113 114 115 115 116 116 117 117 118 118 119 119 120 120
tipo                 : 25 71
var                  : 13
var1                 : 17 19 20 25 63 65 66 133
var2                 : 15 25
vars                 : 3 4 7 43 44
verifica_parametros  : 75
while                : 56
while_op             : 94
while_quad           : 94

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON addP programa1

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON addP programa1

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON addP programa1

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . addP programa1
    (2) addP -> .

    VAR             reduce using rule 2 (addP -> .)
    MAIN            reduce using rule 2 (addP -> .)
    FUN             reduce using rule 2 (addP -> .)
    $end            reduce using rule 2 (addP -> .)

    addP                           shift and go to state 5

state 5

    (1) programa -> PROGRAM ID SEMICOLON addP . programa1
    (3) programa1 -> . vars quadMain modules programa2
    (4) programa1 -> . vars quadMain modules
    (5) programa1 -> . programa2
    (13) vars -> . var
    (14) vars -> . empty
    (6) programa2 -> . main
    (15) var -> . VAR var2
    (140) empty -> .
    (7) main -> . MAIN save_fun LPAREN param2 RPAREN LCURLY vars statement RCURLY END

  ! shift/reduce conflict for MAIN resolved as shift
    VAR             shift and go to state 12
    FUN             reduce using rule 140 (empty -> .)
    $end            reduce using rule 140 (empty -> .)
    MAIN            shift and go to state 13

  ! MAIN            [ reduce using rule 140 (empty -> .) ]

    programa1                      shift and go to state 6
    vars                           shift and go to state 7
    programa2                      shift and go to state 8
    var                            shift and go to state 9
    empty                          shift and go to state 10
    main                           shift and go to state 11

state 6

    (1) programa -> PROGRAM ID SEMICOLON addP programa1 .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON addP programa1 .)


state 7

    (3) programa1 -> vars . quadMain modules programa2
    (4) programa1 -> vars . quadMain modules
    (8) quadMain -> .

    FUN             reduce using rule 8 (quadMain -> .)
    MAIN            reduce using rule 8 (quadMain -> .)
    $end            reduce using rule 8 (quadMain -> .)

    quadMain                       shift and go to state 14

state 8

    (5) programa1 -> programa2 .

    $end            reduce using rule 5 (programa1 -> programa2 .)


state 9

    (13) vars -> var .

    FUN             reduce using rule 13 (vars -> var .)
    MAIN            reduce using rule 13 (vars -> var .)
    $end            reduce using rule 13 (vars -> var .)
    ID              reduce using rule 13 (vars -> var .)
    READ            reduce using rule 13 (vars -> var .)
    PRINT           reduce using rule 13 (vars -> var .)
    FOR             reduce using rule 13 (vars -> var .)
    IF              reduce using rule 13 (vars -> var .)
    WHILE           reduce using rule 13 (vars -> var .)
    RCURLY          reduce using rule 13 (vars -> var .)
    RETURN          reduce using rule 13 (vars -> var .)


state 10

    (14) vars -> empty .

    FUN             reduce using rule 14 (vars -> empty .)
    MAIN            reduce using rule 14 (vars -> empty .)
    $end            reduce using rule 14 (vars -> empty .)
    ID              reduce using rule 14 (vars -> empty .)
    READ            reduce using rule 14 (vars -> empty .)
    PRINT           reduce using rule 14 (vars -> empty .)
    FOR             reduce using rule 14 (vars -> empty .)
    IF              reduce using rule 14 (vars -> empty .)
    WHILE           reduce using rule 14 (vars -> empty .)
    RCURLY          reduce using rule 14 (vars -> empty .)
    RETURN          reduce using rule 14 (vars -> empty .)


state 11

    (6) programa2 -> main .

    $end            reduce using rule 6 (programa2 -> main .)


state 12

    (15) var -> VAR . var2
    (25) var2 -> . var2 tipo var1 SEMICOLON addV
    (26) var2 -> . empty
    (140) empty -> .

    INT             reduce using rule 140 (empty -> .)
    FLOAT           reduce using rule 140 (empty -> .)
    CHAR            reduce using rule 140 (empty -> .)
    FUN             reduce using rule 140 (empty -> .)
    MAIN            reduce using rule 140 (empty -> .)
    $end            reduce using rule 140 (empty -> .)
    ID              reduce using rule 140 (empty -> .)
    READ            reduce using rule 140 (empty -> .)
    PRINT           reduce using rule 140 (empty -> .)
    FOR             reduce using rule 140 (empty -> .)
    IF              reduce using rule 140 (empty -> .)
    WHILE           reduce using rule 140 (empty -> .)
    RCURLY          reduce using rule 140 (empty -> .)
    RETURN          reduce using rule 140 (empty -> .)

    var2                           shift and go to state 15
    empty                          shift and go to state 16

state 13

    (7) main -> MAIN . save_fun LPAREN param2 RPAREN LCURLY vars statement RCURLY END
    (38) save_fun -> .

    LPAREN          reduce using rule 38 (save_fun -> .)

    save_fun                       shift and go to state 17

state 14

    (3) programa1 -> vars quadMain . modules programa2
    (4) programa1 -> vars quadMain . modules
    (36) modules -> . function modules
    (37) modules -> . empty
    (39) function -> . FUN VOID function1 end_func
    (40) function -> . FUN INT function2 end_func
    (41) function -> . FUN CHAR function2 end_func
    (42) function -> . FUN FLOAT function2 end_func
    (140) empty -> .

    FUN             shift and go to state 21
    MAIN            reduce using rule 140 (empty -> .)
    $end            reduce using rule 140 (empty -> .)

    modules                        shift and go to state 18
    function                       shift and go to state 19
    empty                          shift and go to state 20

state 15

    (15) var -> VAR var2 .
    (25) var2 -> var2 . tipo var1 SEMICOLON addV
    (9) tipo -> . INT guardaTipoVar
    (10) tipo -> . FLOAT guardaTipoVar
    (11) tipo -> . CHAR guardaTipoVar

    FUN             reduce using rule 15 (var -> VAR var2 .)
    MAIN            reduce using rule 15 (var -> VAR var2 .)
    $end            reduce using rule 15 (var -> VAR var2 .)
    ID              reduce using rule 15 (var -> VAR var2 .)
    READ            reduce using rule 15 (var -> VAR var2 .)
    PRINT           reduce using rule 15 (var -> VAR var2 .)
    FOR             reduce using rule 15 (var -> VAR var2 .)
    IF              reduce using rule 15 (var -> VAR var2 .)
    WHILE           reduce using rule 15 (var -> VAR var2 .)
    RCURLY          reduce using rule 15 (var -> VAR var2 .)
    RETURN          reduce using rule 15 (var -> VAR var2 .)
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25

    tipo                           shift and go to state 22

state 16

    (26) var2 -> empty .

    INT             reduce using rule 26 (var2 -> empty .)
    FLOAT           reduce using rule 26 (var2 -> empty .)
    CHAR            reduce using rule 26 (var2 -> empty .)
    FUN             reduce using rule 26 (var2 -> empty .)
    MAIN            reduce using rule 26 (var2 -> empty .)
    $end            reduce using rule 26 (var2 -> empty .)
    ID              reduce using rule 26 (var2 -> empty .)
    READ            reduce using rule 26 (var2 -> empty .)
    PRINT           reduce using rule 26 (var2 -> empty .)
    FOR             reduce using rule 26 (var2 -> empty .)
    IF              reduce using rule 26 (var2 -> empty .)
    WHILE           reduce using rule 26 (var2 -> empty .)
    RCURLY          reduce using rule 26 (var2 -> empty .)
    RETURN          reduce using rule 26 (var2 -> empty .)


state 17

    (7) main -> MAIN save_fun . LPAREN param2 RPAREN LCURLY vars statement RCURLY END

    LPAREN          shift and go to state 26


state 18

    (3) programa1 -> vars quadMain modules . programa2
    (4) programa1 -> vars quadMain modules .
    (6) programa2 -> . main
    (7) main -> . MAIN save_fun LPAREN param2 RPAREN LCURLY vars statement RCURLY END

    $end            reduce using rule 4 (programa1 -> vars quadMain modules .)
    MAIN            shift and go to state 13

    programa2                      shift and go to state 27
    main                           shift and go to state 11

state 19

    (36) modules -> function . modules
    (36) modules -> . function modules
    (37) modules -> . empty
    (39) function -> . FUN VOID function1 end_func
    (40) function -> . FUN INT function2 end_func
    (41) function -> . FUN CHAR function2 end_func
    (42) function -> . FUN FLOAT function2 end_func
    (140) empty -> .

    FUN             shift and go to state 21
    MAIN            reduce using rule 140 (empty -> .)
    $end            reduce using rule 140 (empty -> .)

    function                       shift and go to state 19
    modules                        shift and go to state 28
    empty                          shift and go to state 20

state 20

    (37) modules -> empty .

    MAIN            reduce using rule 37 (modules -> empty .)
    $end            reduce using rule 37 (modules -> empty .)


state 21

    (39) function -> FUN . VOID function1 end_func
    (40) function -> FUN . INT function2 end_func
    (41) function -> FUN . CHAR function2 end_func
    (42) function -> FUN . FLOAT function2 end_func

    VOID            shift and go to state 29
    INT             shift and go to state 30
    CHAR            shift and go to state 31
    FLOAT           shift and go to state 32


state 22

    (25) var2 -> var2 tipo . var1 SEMICOLON addV
    (16) var1 -> . ID
    (17) var1 -> . ID COMMA var1 addV
    (18) var1 -> . ID arr
    (19) var1 -> . ID arr COMMA var1 addV
    (20) var1 -> . ID mat COMMA var1 addV
    (21) var1 -> . ID mat
    (22) var1 -> . ID mat especial
    (23) var1 -> . empty
    (140) empty -> .

    ID              shift and go to state 34
    SEMICOLON       reduce using rule 140 (empty -> .)

    var1                           shift and go to state 33
    empty                          shift and go to state 35

state 23

    (9) tipo -> INT . guardaTipoVar
    (12) guardaTipoVar -> .

    ID              reduce using rule 12 (guardaTipoVar -> .)
    SEMICOLON       reduce using rule 12 (guardaTipoVar -> .)
    RPAREN          reduce using rule 12 (guardaTipoVar -> .)
    INT             reduce using rule 12 (guardaTipoVar -> .)
    FLOAT           reduce using rule 12 (guardaTipoVar -> .)
    CHAR            reduce using rule 12 (guardaTipoVar -> .)

    guardaTipoVar                  shift and go to state 36

state 24

    (10) tipo -> FLOAT . guardaTipoVar
    (12) guardaTipoVar -> .

    ID              reduce using rule 12 (guardaTipoVar -> .)
    SEMICOLON       reduce using rule 12 (guardaTipoVar -> .)
    RPAREN          reduce using rule 12 (guardaTipoVar -> .)
    INT             reduce using rule 12 (guardaTipoVar -> .)
    FLOAT           reduce using rule 12 (guardaTipoVar -> .)
    CHAR            reduce using rule 12 (guardaTipoVar -> .)

    guardaTipoVar                  shift and go to state 37

state 25

    (11) tipo -> CHAR . guardaTipoVar
    (12) guardaTipoVar -> .

    ID              reduce using rule 12 (guardaTipoVar -> .)
    SEMICOLON       reduce using rule 12 (guardaTipoVar -> .)
    RPAREN          reduce using rule 12 (guardaTipoVar -> .)
    INT             reduce using rule 12 (guardaTipoVar -> .)
    FLOAT           reduce using rule 12 (guardaTipoVar -> .)
    CHAR            reduce using rule 12 (guardaTipoVar -> .)

    guardaTipoVar                  shift and go to state 38

state 26

    (7) main -> MAIN save_fun LPAREN . param2 RPAREN LCURLY vars statement RCURLY END
    (71) param2 -> . param2 tipo param1 addV addParam
    (72) param2 -> . empty
    (140) empty -> .

    RPAREN          reduce using rule 140 (empty -> .)
    INT             reduce using rule 140 (empty -> .)
    FLOAT           reduce using rule 140 (empty -> .)
    CHAR            reduce using rule 140 (empty -> .)

    param2                         shift and go to state 39
    empty                          shift and go to state 40

state 27

    (3) programa1 -> vars quadMain modules programa2 .

    $end            reduce using rule 3 (programa1 -> vars quadMain modules programa2 .)


state 28

    (36) modules -> function modules .

    MAIN            reduce using rule 36 (modules -> function modules .)
    $end            reduce using rule 36 (modules -> function modules .)


state 29

    (39) function -> FUN VOID . function1 end_func
    (43) function1 -> . ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RCURLY

    ID              shift and go to state 42

    function1                      shift and go to state 41

state 30

    (40) function -> FUN INT . function2 end_func
    (44) function2 -> . ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RETURN operadorReturn exp quad_return SEMICOLON RCURLY

    ID              shift and go to state 44

    function2                      shift and go to state 43

state 31

    (41) function -> FUN CHAR . function2 end_func
    (44) function2 -> . ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RETURN operadorReturn exp quad_return SEMICOLON RCURLY

    ID              shift and go to state 44

    function2                      shift and go to state 45

state 32

    (42) function -> FUN FLOAT . function2 end_func
    (44) function2 -> . ID save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RETURN operadorReturn exp quad_return SEMICOLON RCURLY

    ID              shift and go to state 44

    function2                      shift and go to state 46

state 33

    (25) var2 -> var2 tipo var1 . SEMICOLON addV

    SEMICOLON       shift and go to state 47


state 34

    (16) var1 -> ID .
    (17) var1 -> ID . COMMA var1 addV
    (18) var1 -> ID . arr
    (19) var1 -> ID . arr COMMA var1 addV
    (20) var1 -> ID . mat COMMA var1 addV
    (21) var1 -> ID . mat
    (22) var1 -> ID . mat especial
    (30) arr -> . LBRACKET CTEI RBRACKET
    (31) arr -> . LBRACKET exp RBRACKET
    (32) mat -> . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
    (33) mat -> . LBRACKET exp RBRACKET LBRACKET exp RBRACKET
    (34) mat -> . LBRACKET exp RBRACKET LBRACKET CTEI RBRACKET
    (35) mat -> . LBRACKET CTEI RBRACKET LBRACKET exp RBRACKET

  ! shift/reduce conflict for COMMA resolved as shift
    SEMICOLON       reduce using rule 16 (var1 -> ID .)
    MUL             reduce using rule 16 (var1 -> ID .)
    DIV             reduce using rule 16 (var1 -> ID .)
    PLUS            reduce using rule 16 (var1 -> ID .)
    MINUS           reduce using rule 16 (var1 -> ID .)
    GT              reduce using rule 16 (var1 -> ID .)
    LT              reduce using rule 16 (var1 -> ID .)
    GTE             reduce using rule 16 (var1 -> ID .)
    LTE             reduce using rule 16 (var1 -> ID .)
    NE              reduce using rule 16 (var1 -> ID .)
    COMPARE         reduce using rule 16 (var1 -> ID .)
    AND             reduce using rule 16 (var1 -> ID .)
    OR              reduce using rule 16 (var1 -> ID .)
    RBRACKET        reduce using rule 16 (var1 -> ID .)
    RPAREN          reduce using rule 16 (var1 -> ID .)
    TO              reduce using rule 16 (var1 -> ID .)
    INT             reduce using rule 16 (var1 -> ID .)
    FLOAT           reduce using rule 16 (var1 -> ID .)
    CHAR            reduce using rule 16 (var1 -> ID .)
    CTEI            reduce using rule 16 (var1 -> ID .)
    CTEF            reduce using rule 16 (var1 -> ID .)
    CTEC            reduce using rule 16 (var1 -> ID .)
    CTESTRING       reduce using rule 16 (var1 -> ID .)
    LPAREN          reduce using rule 16 (var1 -> ID .)
    ID              reduce using rule 16 (var1 -> ID .)
    COMMA           shift and go to state 48
    LBRACKET        shift and go to state 51

  ! COMMA           [ reduce using rule 16 (var1 -> ID .) ]

    arr                            shift and go to state 49
    mat                            shift and go to state 50

state 35

    (23) var1 -> empty .

    SEMICOLON       reduce using rule 23 (var1 -> empty .)
    MUL             reduce using rule 23 (var1 -> empty .)
    DIV             reduce using rule 23 (var1 -> empty .)
    PLUS            reduce using rule 23 (var1 -> empty .)
    MINUS           reduce using rule 23 (var1 -> empty .)
    GT              reduce using rule 23 (var1 -> empty .)
    LT              reduce using rule 23 (var1 -> empty .)
    GTE             reduce using rule 23 (var1 -> empty .)
    LTE             reduce using rule 23 (var1 -> empty .)
    NE              reduce using rule 23 (var1 -> empty .)
    COMPARE         reduce using rule 23 (var1 -> empty .)
    AND             reduce using rule 23 (var1 -> empty .)
    OR              reduce using rule 23 (var1 -> empty .)
    RBRACKET        reduce using rule 23 (var1 -> empty .)
    RPAREN          reduce using rule 23 (var1 -> empty .)
    COMMA           reduce using rule 23 (var1 -> empty .)
    TO              reduce using rule 23 (var1 -> empty .)
    INT             reduce using rule 23 (var1 -> empty .)
    FLOAT           reduce using rule 23 (var1 -> empty .)
    CHAR            reduce using rule 23 (var1 -> empty .)
    CTEI            reduce using rule 23 (var1 -> empty .)
    CTEF            reduce using rule 23 (var1 -> empty .)
    CTEC            reduce using rule 23 (var1 -> empty .)
    CTESTRING       reduce using rule 23 (var1 -> empty .)
    LPAREN          reduce using rule 23 (var1 -> empty .)
    ID              reduce using rule 23 (var1 -> empty .)


state 36

    (9) tipo -> INT guardaTipoVar .

    ID              reduce using rule 9 (tipo -> INT guardaTipoVar .)
    SEMICOLON       reduce using rule 9 (tipo -> INT guardaTipoVar .)
    RPAREN          reduce using rule 9 (tipo -> INT guardaTipoVar .)
    INT             reduce using rule 9 (tipo -> INT guardaTipoVar .)
    FLOAT           reduce using rule 9 (tipo -> INT guardaTipoVar .)
    CHAR            reduce using rule 9 (tipo -> INT guardaTipoVar .)


state 37

    (10) tipo -> FLOAT guardaTipoVar .

    ID              reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)
    SEMICOLON       reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)
    RPAREN          reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)
    INT             reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)
    FLOAT           reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)
    CHAR            reduce using rule 10 (tipo -> FLOAT guardaTipoVar .)


state 38

    (11) tipo -> CHAR guardaTipoVar .

    ID              reduce using rule 11 (tipo -> CHAR guardaTipoVar .)
    SEMICOLON       reduce using rule 11 (tipo -> CHAR guardaTipoVar .)
    RPAREN          reduce using rule 11 (tipo -> CHAR guardaTipoVar .)
    INT             reduce using rule 11 (tipo -> CHAR guardaTipoVar .)
    FLOAT           reduce using rule 11 (tipo -> CHAR guardaTipoVar .)
    CHAR            reduce using rule 11 (tipo -> CHAR guardaTipoVar .)


state 39

    (7) main -> MAIN save_fun LPAREN param2 . RPAREN LCURLY vars statement RCURLY END
    (71) param2 -> param2 . tipo param1 addV addParam
    (9) tipo -> . INT guardaTipoVar
    (10) tipo -> . FLOAT guardaTipoVar
    (11) tipo -> . CHAR guardaTipoVar

    RPAREN          shift and go to state 52
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25

    tipo                           shift and go to state 53

state 40

    (72) param2 -> empty .

    RPAREN          reduce using rule 72 (param2 -> empty .)
    INT             reduce using rule 72 (param2 -> empty .)
    FLOAT           reduce using rule 72 (param2 -> empty .)
    CHAR            reduce using rule 72 (param2 -> empty .)


state 41

    (39) function -> FUN VOID function1 . end_func
    (45) end_func -> .

    FUN             reduce using rule 45 (end_func -> .)
    MAIN            reduce using rule 45 (end_func -> .)
    $end            reduce using rule 45 (end_func -> .)

    end_func                       shift and go to state 54

state 42

    (43) function1 -> ID . save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RCURLY
    (38) save_fun -> .

    LPAREN          reduce using rule 38 (save_fun -> .)

    save_fun                       shift and go to state 55

state 43

    (40) function -> FUN INT function2 . end_func
    (45) end_func -> .

    FUN             reduce using rule 45 (end_func -> .)
    MAIN            reduce using rule 45 (end_func -> .)
    $end            reduce using rule 45 (end_func -> .)

    end_func                       shift and go to state 56

state 44

    (44) function2 -> ID . save_fun LPAREN param2 RPAREN SEMICOLON LCURLY vars statement RETURN operadorReturn exp quad_return SEMICOLON RCURLY
    (38) save_fun -> .

    LPAREN          reduce using rule 38 (save_fun -> .)

    save_fun                       shift and go to state 57

state 45

    (41) function -> FUN CHAR function2 . end_func
    (45) end_func -> .

    FUN             reduce using rule 45 (end_func -> .)
    MAIN            reduce using rule 45 (end_func -> .)
    $end            reduce using rule 45 (end_func -> .)

    end_func                       shift and go to state 58

state 46

    (42) function -> FUN FLOAT function2 . end_func
    (45) end_func -> .

    FUN             reduce using rule 45 (end_func -> .)
    MAIN            reduce using rule 45 (end_func -> .)
    $end            reduce using rule 45 (end_func -> .)

    end_func                       shift and go to state 59

state 47

    (25) var2 -> var2 tipo var1 SEMICOLON . addV
    (24) addV -> .
